# envix

./: Cargo.toml  README.md  envix.toml  envix.yml  sample.sh
schemas/: config.schema.json
src/: command.rs  config.rs  env.rs  error.rs  main.rs  service.rs
src/command/: inject.rs  new.rs  print.rs
src/config/: v1.rs
src/config/v1/: env.rs  service.rs  stage.rs
src/config/v1/service/: google_cloud_secret_manager.rs
src/env/: secret.rs  value.rs
tests/config/: envix.toml  envix_only_secrets.toml  envix_only_vars.toml  envix_only_vars_with_stage.toml
