[package]
name = "envix"
version = "0.1.0"
edition = "2021"
description = "Environment variable injection tool."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
thiserror = "1.0.56"

[dev-dependencies]
assert_matches = "1.5.0"
