[package]
name = "envix"
version = "0.1.0"
edition = "2021"
description = "Environment variable injection tool."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
indexmap = { version = "2.2.1", features = ["serde"] }
serde = { version = "^1.0.194", features = ["derive"] }
serde_json = { version = "^1.0.113", features = ["preserve_order"] }
serde_repr = "0.1.18"
thiserror = "1.0.56"
toml = { version = "0.8.8", features = ["preserve_order"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.18.2"
